# Reasoning-Abilities-in-Small-Language-Models

./: README.md
DisCIPL/: README.md  pyproject.toml
DisCIPL/disciple/: inference.py  model_generators.py
DisCIPL/disciple/configs/: disciple_importance.json  gpt_4o.json  gpt_4o_cot.json  test.json  test_rejection.json  vllm.json  vllm_cot.json
DisCIPL/disciple/prompts/: planner_system_prompt.md
DisCIPL/evaluations/: analysis_ifeval.ipynb  arg_parser.py
DisCIPL/evaluations/collie_eval/: models.py
DisCIPL/evaluations/collie_eval/deprecated/: _analysis.ipynb
DisCIPL/evaluations/puzzle/: models.py
DisCIPL/tests/: test_example_models.py  test_model_generators.py
GRPO/: README.md  compare_kaggle_models.ipynb  evaluate_kaggle_models.ipynb
GRPO/evaluation/: MultiArith_eval_ready.jsonl  Open-RS1-MultiArith.ipynb  Open-RS1-SVAMP.ipynb  Open-RS2-MultiArith.ipynb  Open-RS2-SVAMP.ipynb  Open-RS3-MultiArith.ipynb  Open-RS3-SVAMP.ipynb  SVAMP_eval_ready.jsonl
GRPO/results-qwen_1/: __huggingface_repos__.json
GRPO/results_deepseak_2/: __huggingface_repos__.json
GRPO/results_deepseek_1/: __huggingface_repos__.json
GRPO/results_qwen_2/: __huggingface_repos__.json
self-steering/: .gitignore  .gitmodules  LICENSE  benchmark.txt  kaggle_notebook.ipynb
self-steering/disciple/: base_models.py  dev_models.py  masks.py  model_generators.py  pipelines.py
self-steering/evaluations/: __init__.py  analysis_new.ipynb  analysis_old.ipynb  analysis_utils.py  arg_parser.py  coherency.py  dataset.py  model_registry.py  plotting.py  run_benchmark.py
(+73 files in other folders)
